--- a/about.html
+++ b/about.html
@@ -1,7 +1,22 @@
-<about.html>
-  <bash>
-    css/style.css
-    js/script.js
-  </bash>
-</about.html>
+<!DOCTYPE html>
+<html lang="en">
+ <html>
+  <head>
+    <meta charset="UTF-8">
+    <title>About | TSA Webmaster</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/style.css">
+  </head>
+  <body>
 
+    <nav>
+      <a href="index.html">Home</a>
+      <a href="about.html">About</a>
+    </nav>
+    <main>
+      <h1>About This Project</h1>
+      <p>TSA documentation will be placed here</p>
+    </main>
+    
+  </body>
+  </html>
