--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+<html>
+  <head>
   <meta charset="UTF-8">
   <title>TSA-Webmaster-2026</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
