--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
   <main>
     <h1>Welcome to Our TSA Webmaster Project</h1>
-    <p>This webssite was created for the TSA Webmaster competition</p>
+    <p>This website was created for the TSA Webmaster competition</p>
   </main>
 
   
