--- a/index.html
+++ b/index.html
@@ -1,30 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
-<html>
-  <head>
+<head>
   <meta charset="UTF-8">
   <title>TSA-Webmaster-2026</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
 
 
-  <nav>
-    <a href="index.html">Home</a>
-    <a href="about.html">About</a>
-  </nav>
+  <nav class="navbar"> 
+   <div class="logo">Union County Resource Hub</div> 
+   <ul class="nav-links"> 
+     <li><a href="index.html">Home</a></li> 
+     <li class="dropdown"> 
+       <a href="#">Pages</a> 
+       <ul class="dropdown-menu'> 
+         <li><a href="#resources">Resources</a></li> 
+         <li><a href="#spotlight">Spotlight</a></li> 
+         <li><a href="#events">Event Calendar</a></li> 
+         <li><a href="about.html">About</a></li> 
+       </ul> 
+     </li> 
+   </ul> 
+ </nav>
 
 
-  <main>
+  <header>
     <h1>Welcome to Our TSA Webmaster Project</h1>
     <p>This website was created for the TSA Webmaster competition</p>
-  </main>
+  </header>
 
-  
-  <script src="js/script.js"></script>
- 
+<script src="js/script.js"></script>
 </body>
 </html>
