--- a/index.html
+++ b/index.html
@@ -31,6 +31,12 @@
     <p>This website was created for the TSA Webmaster competition</p>
   </header>
 
+<section id="events"> 
+  <h2>Community Event Calendar</h2>
+  <div class="events-list" id="eventList"> 
+  
+  </div> 
+</section>
 <script src="js/script.js"></script>
 </body>
 </html>
