--- a/index.html
+++ b/index.html
@@ -38,5 +38,28 @@
   </div> 
 </section>
 <script src="js/script.js"></script>
+
+<section id="spotlight"> 
+    <h2>Spotlight resources</h2>
+    <div class="spotlight-list"> 
+        <div class ="spotlight-card"> 
+            <h3>Union General Hospital</h3> 
+            <p>Provides medical care, health programs, and family services to Union County residents.</p> 
+            <a href= "https://www.uniongeneral.org/" target="_blank">Vist Website</a> 
+        </div> 
+
+        <div class="spotlight-card"> 
+            <h3> Union County Public Library</h3> 
+            <p> Offers free access to books, programs for children and adults, and community events.</p> 
+            <a href="https://www.unioncountypubliclibrary.org/" target="_blank">Vist website</a> 
+        </div> 
+
+        <div class="spotlight-card"> 
+            <h3>Union County Community Center</h3> 
+            <p>Hosts recreational programs, family activities, and support resources for residents.</p> 
+            <a href="#" target="_blank">Visit Website</a> 
+        </div> 
+    </div> 
+</section>
 </body>
 </html>
