--- a/index.html
+++ b/index.html
@@ -61,5 +61,28 @@
         </div> 
     </div> 
 </section>
+
+<section id="submit-resource"> 
+    <h2>Submit a community Resource</h2> 
+    <form id="resourceForm"> 
+        <label for="resourceName">Resource Name:</label>label> 
+        <input type="text" id="resourceName" name="resourceName" required> 
+
+        <label for="resourceType>Type of Resources:</label> 
+        <input type="text" id="resourceType" name="resourceType" required> 
+
+        <label for="resourceLocation">Location:</label> 
+        <input type="text" id="resourceLocation" name="resourceLocation" required>  
+
+        <label for="resourceWebsite">Website (Optional):</label> 
+        <input type="url" id="resourceWebsite" name= resourceWebsite"> 
+
+        <label for="resourceDescription'>description:</label> 
+        <textarea id="resourcedescription" name="resourceDescription" rows="4" required></textarea> 
+
+        <button Type="submit"> Submit Resource</button> 
+   </form> 
+   <p id="formMessage></p> 
+<section>
 </body>
 </html>
