--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
        <a href="#">Pages</a> 
        <ul class="dropdown-menu'> 
          <li><a href="#resources">Resources</a></li> 
+         <li><a href="our-community.html">Our Community</a>
          <li><a href="#spotlight">Spotlight</a></li> 
          <li><a href="#events">Event Calendar</a></li> 
          <li><a href="about.html">About</a></li> 
