--- a/index.html
+++ b/index.html
@@ -9,18 +9,23 @@
 <body>
 
 
-  <nav class="navbar"> 
-   <div class="logo">Union County Resource Hub</div> 
-   <ul class="nav-links"> 
-     <li><a href="index.html">Home</a></li> 
-     <li class="dropdown"> 
-       <a href="#">Pages</a> 
-       <ul class="dropdown-menu'> 
-         <li><a href="#resources">Resources</a></li> 
-         <li><a href="our-community.html">Our Community</a>
-         <li><a href="#spotlight">Spotlight</a></li> 
-         <li><a href="#events">Event Calendar</a></li> 
-         <li><a href="about.html">About</a></li> 
+  <nav class="nav">
+    <div class="logo">Union County Hub</div>
+    <ul class="navlinks">
+        <li><a href="index.html">Home</a></li>
+        <li class="dropdown">
+            <a href="#">Pages</a>
+            <ul class="dropdown-menu">
+                <li><a href="resources.html">Resources</a></li>
+                <li><a href="our-community.html">Our Community</a></li>
+                <li><a href="spotlight.html">Spotlight</a></li>
+                <li><a href="events.html">Events</a></li>
+                <li><a href="about.html">About</a></li>
+            </ul>
+        </li>
+    </ul>
+</nav>
+
        </ul> 
      </li> 
    </ul> 
