--- a/events.html
+++ b/events.html
@@ -1,1 +1,47 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>Community Events | Union County</title>
+  <link rel="stylesheet" href="style.css">
+</head>
+
+<body>
+
+  <nav class="nav">
+    <ul class="nav-links">
+      <li><a href="events.html">Events</a></li>
+    </ul>
+  </nav>
+
+  <main>
+
+    <h1>Community Event Calendar</h1>
+    <p>Explore upcoming events in Union County, Georgia.</p>
+
+    <section class="calendar">
+
+      <div class="calendar-header">
+        <button id="prevMonth">&#8592;</button>
+        <h2 id="monthYear">Month Year</h2>
+        <button id="nextMonth">&#8594;</button>
+      </div>
+
+      <div class="calendar-grid">
+        <div class="day-name">Sun</div>
+        <div class="day-name">Mon</div>
+        <div class="day-name">Tue</div>
+        <div class="day-name">Wed</div>
+        <div class="day-name">Thu</div>
+        <div class="day-name">Fri</div>
+        <div class="day-name">Sat</div>
+      </div>
+
+    </section>
+
+  </main>
+
+  <script src="script.js"></script>
+</body>
+</html>
 
