--- a/index.html
+++ b/index.html
@@ -18,20 +18,13 @@
         <li><a href="events.html">Events</a></li>
         <li><a href="about.html">About</a></li>
     </ul>
-</nav>
-
-  <header>
-    <h1>Welcome to Our TSA Webmaster Project</h1>
-    <p>This website was created for the TSA Webmaster competition</p>
-  </header>
-
-<section id="events"> 
-  <h2>Community Event Calendar</h2>
-  <div class="events-list" id="eventList"> 
-  
-  </div> 
-</section>
-<script src="js/script.js"></script>
+</nav> 
+<header class="hero">
+  <div class="hero-text">
+    <h1>Welcome to our TSA Webmaster Project</h1>
+    <p>This website was created for the TSA Webmaster competition.</p>
+  </div>
+</header>
 
 <section id="spotlight"> 
     <h2>Spotlight resources</h2>
