--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
 </nav> 
 <header class="hero">
   <div class="hero-text">
-    <h1>Welcome to our TSA Webmaster Project</h1>
-    <p>This website was created for the TSA Webmaster competition.</p>
+    <h1>Welcome to Our Community</h1>
+    <p>Explore local services, community programs, and upcoming events in Union County.</p>
   </div>
 </header>
 
