--- a/index.html
+++ b/index.html
@@ -71,5 +71,41 @@
    </form> 
    <p id="formMessage></p> 
 <section>
+
+<footer>
+  <div class="footer-container">
+    <!-- Main Links -->
+    <div class="footer-section">
+      <h3>Main Links</h3>
+      <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="ourcommunity.html">Our Community</a></li>
+        <li><a href="services.html">Services</a></li>
+        <li><a href="credit.html">Credit</a></li>
+        <li><a href="overview.html">Overview</a></li>
+      </ul>
+    </div>
+
+    <div class="footer-section">
+      <h3>Contact Us</h3>
+      <p>Phone: (555) 123-4567</p>
+      <p>Address: 123 Main Street, Blairsville, GA</p>
+      <p>Email: <a href="mailto:info@unioncommunity.org">info@unioncommunity.org</a></p>
+    </div>
+
+    <div class="footer-section">
+      <h3>Policies</h3>
+      <ul>
+        <li><a href="privacy.html">Privacy Policy</a></li>
+        <li><a href="terms.html">Terms of Use</a></li>
+        <li><a href="sales-refunds.html">Sales & Refunds</a></li>
+      </ul>
+    </div>
+  </div>
+
+  <div class="footer-bottom">
+    &copy; 2026 Union County Community Hub. All rights reserved.
+  </div>
+</footer>
 </body>
 </html>
