--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 
 <footer>
   <div class="footer-container">
-    <!-- Main Links -->
+
     <div class="footer-section">
       <h3>Main Links</h3>
       <ul>
@@ -87,23 +87,24 @@
     </div>
 
     <div class="footer-section">
-      <h3>Contact Us</h3>
-      <p>Phone: (555) 123-4567</p>
-      <p>Address: 123 Main Street, Blairsville, GA</p>
-      <p>Email: <a href="mailto:info@unioncommunity.org">info@unioncommunity.org</a></p>
+      <h3>Contact</h3>
+      <p>📞 (706) 555-1234</p>
+      <p>📍 Union County, GA</p>
+      <p>✉️ info@communityhub.org</p>
     </div>
 
     <div class="footer-section">
-      <h3>Policies</h3>
+      <h3>Legal</h3>
       <ul>
         <li><a href="privacy.html">Privacy Policy</a></li>
         <li><a href="terms.html">Terms of Use</a></li>
       </ul>
-    </div>
+    </div> 
+          
   </div>
 
   <div class="footer-bottom">
-    &copy; 2026 Union County Community Hub. All rights reserved.
+    © 2026 Union County Community Hub. All rights reserved.
   </div>
 </footer>
 </body>
