--- a/index.html
+++ b/index.html
@@ -107,5 +107,12 @@
     © 2026 Union County Community Hub. All rights reserved.
   </div>
 </footer>
+  </main>
+
+  <footer>
+    FOOTER TEST — YOU SHOULD SEE THIS
+  </footer>
+
 </body>
 </html>
+
