--- a/index.html
+++ b/index.html
@@ -72,6 +72,8 @@
    <p id="formMessage></p> 
 <section>
 
+</main>
+
 <footer>
   <div class="footer-container">
 
@@ -98,21 +100,18 @@
       <ul>
         <li><a href="privacy.html">Privacy Policy</a></li>
         <li><a href="terms.html">Terms of Use</a></li>
+        <li><a href="refunds.html">Sales & Refunds</a></li>
       </ul>
-    </div> 
-          
+    </div>
+
   </div>
 
   <div class="footer-bottom">
     © 2026 Union County Community Hub. All rights reserved.
   </div>
 </footer>
-  </main>
-
-  <footer>
-    FOOTER TEST — YOU SHOULD SEE THIS
-  </footer>
 
 </body>
 </html>
+
 
