--- a/index.html
+++ b/index.html
@@ -26,6 +26,21 @@
   </div>
 </header>
 
+<section class="intro">
+  <div class="intro-text">
+    <h2>About Our Community Hub</h2>
+    <p>
+      This community hub was created to connect Union County residents with helpful local resources,
+      services, and programs. Whether you are looking for healthcare, community support, or upcoming
+      events, this site makes it easy to find reliable information all in one place.
+    </p>
+  </div>
+
+  <div class="intro-image">
+    <img src="images/community.jpg" alt="Union County community">
+  </div>
+</section>
+
 <section id="spotlight"> 
     <h2>Spotlight resources</h2>
     <div class="spotlight-list"> 
