--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
   </div>
 
   <div class="intro-image">
-    <img src="images/community.jpg" alt="Union County community">
+    <img src="https://images.squarespace-cdn.com/content/v1/5a4bea8c90bade38480c14c2/acd617d6-2fae-4d15-8ebd-a2d3ce3d58e1/greetings-from-union-county-mural_final.jpg?format=1500w" alt="Union County community">
   </div>
 </section>
 
