--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 </nav> 
 <header class="hero">
   <div class="hero-text">
-    <h1>Welcome to Our Community</h1>
+    <h1>Welcome to Blairsville</h1>
     <p>Explore local services, community programs, and upcoming events in Union County.</p>
   </div>
 </header>
