--- a/index.html
+++ b/index.html
@@ -8,16 +8,17 @@
 </head>
 <body>
 
-<nav class="nav">
-    <ul class="navlinks">
-        <li><a href="index.html">Home</a></li>
-        <li><a href="resources.html">Resources</a></li>
-        <li><a href="our-community.html">Our Community</a></li>
-        <li><a href="spotlight.html">Spotlight</a></li>
-        <li><a href="events.html">Events</a></li>
-        <li><a href="about.html">About</a></li>
-    </ul>
-</nav> 
+<nav>
+  <ul class="nav-links">
+    <li><a href="index.html">Home</a></li>
+    <li><a href="ourcommunity.html">Our Community</a></li>
+    <li><a href="services.html">Services</a></li>
+    <li><a href="spotlight.html">Spotlight</a></li>
+    <li><a href="events.html">Events</a></li>
+    <li><a href="about.html">About</a></li>
+  </ul>
+</nav>
+
 <header class="hero">
   <div class="hero-text">
     <h1>Welcome to Blairsville</h1>
