--- a/index.html
+++ b/index.html
@@ -91,15 +91,16 @@
 
 <footer>
   <div class="footer-container">
-
+    
     <div class="footer-section">
       <h3>Main Links</h3>
       <ul>
         <li><a href="index.html">Home</a></li>
         <li><a href="ourcommunity.html">Our Community</a></li>
         <li><a href="services.html">Services</a></li>
-        <li><a href="credit.html">Credit</a></li>
-        <li><a href="overview.html">Overview</a></li>
+        <li><a href="spotlight.html">Spotlight</a></li>
+        <li><a href="events.html">Events</a></li>
+        <li><a href="about.html">About</a></li>
       </ul>
     </div>
 
