--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 
 <footer>
   <div class="footer-container">
-    
+    <!-- Main Links -->
     <div class="footer-section">
       <h3>Main Links</h3>
       <ul>
@@ -119,7 +119,6 @@
         <li><a href="refunds.html">Sales & Refunds</a></li>
       </ul>
     </div>
-
   </div>
 
   <div class="footer-bottom">
