--- a/spotlight.html
+++ b/spotlight.html
@@ -58,6 +58,10 @@
 
         <button type="submit">Submit Resource</button>
       </form>
+
+
+      <p class="submit-instructions"> 
+        Please submit only resources that are relevant to our community. We appreciate entries that are helpful, trustworthy, and provide value to everyone who visits this page.
       <p id="form-message"></p>
     </section>
   </main>
