--- a/spotlight.html
+++ b/spotlight.html
@@ -9,6 +9,18 @@
 <body>
   <header>
     <nav>
+      <ul class="nav-links">
+        <li><a href="index.html">Home</a></li>
+        <li><a href="ourcommunity.html">Our Community</a></li>
+        <li><a href="spotlight.html">Spotlight</a></li>
+        <li><a href="events.html">Events</a></li>
+        <li><a href="about.html">About</a></li>
+      </ul>
+    </nav>
+  </header>
+
+  <header>
+    <nav>
       <!-- Your header/nav links here -->
     </nav>
     <h1>Community Spotlight</h1>
