--- a/events.html
+++ b/events.html
@@ -8,11 +8,18 @@
 
 <body>
 
-  <nav class="nav">
-    <ul class="nav-links">
-      <li><a href="events.html">Events</a></li>
-    </ul>
-  </nav>
+  <header>
+    <nav>
+      <ul class="nav-links">
+        <li><a href="index.html">Home</a></li>
+        <li><a href="ourcommunity.html">Our Community</a></li>
+        <li><a href="spotlight.html">Spotlight</a></li>
+        <li><a href="events.html">Events</a></li>
+        <li><a href="about.html">About</a></li>
+      </ul>
+    </nav>
+  </header>
+
 
   <main>
 
