--- a/events.html
+++ b/events.html
@@ -2,12 +2,13 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Community Events | Union County</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Events</title>
   <link rel="stylesheet" href="css/style.css">
 </head>
-
 <body>
 
+  <!-- HEADER + NAV -->
   <header>
     <nav>
       <ul class="nav-links">
@@ -18,36 +19,66 @@
         <li><a href="about.html">About</a></li>
       </ul>
     </nav>
+
+    <h1>Upcoming Events</h1>
+    <p>Check out the latest events happening in our community.</p>
   </header>
 
-
+  <!-- MAIN CONTENT -->
   <main>
-
-    <h1>Community Event Calendar</h1>
-    <p>Explore upcoming events in Union County, Georgia.</p>
-
-    <section class="calendar">
-
-      <div class="calendar-header">
-        <button id="prevMonth">&#8592;</button>
-        <h2 id="monthYear">Month Year</h2>
-        <button id="nextMonth">&#8594;</button>
-      </div>
-
-      <div class="calendar-grid">
-        <div class="day-name">Sun</div>
-        <div class="day-name">Mon</div>
-        <div class="day-name">Tue</div>
-        <div class="day-name">Wed</div>
-        <div class="day-name">Thu</div>
-        <div class="day-name">Fri</div>
-        <div class="day-name">Sat</div>
-      </div>
-
+    <!-- EVENTS LIST -->
+    <section id="events-section">
+      <h2>Events List</h2>
+      <div id="eventlist"></div> <!-- JS will populate events here -->
     </section>
 
+    <!-- CALENDAR -->
+    <section id="calendar-section">
+      <h2>Community Calendar</h2>
+      <div class="calendar-controls">
+        <button id="prevMonth">&lt;</button>
+        <span id="monthYear"></span>
+        <button id="nextMonth">&gt;</button>
+      </div>
+      <div class="calendar-grid"></div>
+    </section>
   </main>
 
-  <script src="script.js"></script>
+  <!-- FOOTER -->
+  <footer>
+    <div class="footer-container">
+      <div class="footer-links">
+        <h3>Main Links</h3>
+        <ul>
+          <li><a href="index.html">Home</a></li>
+          <li><a href="ourcommunity.html">Our Community</a></li>
+          <li><a href="spotlight.html">Spotlight</a></li>
+          <li><a href="events.html">Events</a></li>
+          <li><a href="about.html">About</a></li>
+        </ul>
+      </div>
+
+      <div class="footer-contact">
+        <h3>Contact</h3>
+        <p>Phone: (123) 456-7890</p>
+        <p>Location: 123 Main Street, City, State</p>
+        <p>Email: info@example.com</p>
+      </div>
+
+      <div class="footer-legal">
+        <h3>Legal</h3>
+        <ul>
+          <li><a href="privacy.html">Privacy Policy</a></li>
+          <li><a href="terms.html">Terms of Use</a></li>
+          <li><a href="sales.html">Sales & Refunds</a></li>
+        </ul>
+      </div>
+    </div>
+
+    <p class="copyright">© 2026 Your Website Name. All rights reserved.</p>
+  </footer>
+
+  <!-- JS -->
+  <script src="js/script.js"></script>
 </body>
 </html>
