--- a/events.html
+++ b/events.html
@@ -78,7 +78,33 @@
     <p class="copyright">© 2026 Your Website Name. All rights reserved.</p>
   </footer>
 
-  <!-- JS -->
+<section class="events-list">
+  <h2>Upcoming Events</h2>
+
+  <ul>
+    <li>
+      <strong>March 12:</strong>
+      <a href="https://example.com/event1" target="_blank">
+        Community Cleanup Day
+      </a>
+    </li>
+
+    <li>
+      <strong>March 18:</strong>
+      <a href="https://example.com/event2" target="_blank">
+        Local Business Workshop
+      </a>
+    </li>
+
+    <li>
+      <strong>March 25:</strong>
+      <a href="https://example.com/event3" target="_blank">
+        Spring Festival
+      </a>
+    </li>
+  </ul>
+</section>
+
   <script src="js/script.js"></script>
 </body>
 </html>
