--- a/about.html
+++ b/about.html
@@ -1,6 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
  <html>
+ <header>
+    <nav>
+      <ul class="nav-links">
+        <li><a href="index.html">Home</a></li>
+        <li><a href="ourcommunity.html">Our Community</a></li>
+        <li><a href="spotlight.html">Spotlight</a></li>
+        <li><a href="events.html">Events</a></li>
+        <li><a href="about.html">About</a></li>
+      </ul>
+    </nav>
+
+    <h1>Upcoming Events</h1>
+    <p>Check out the latest events happening in our community.</p>
+  </header>
+  
   <head>
     <meta charset="UTF-8">
     <title>About | TSA Webmaster</title>
