--- a/index.html
+++ b/index.html
@@ -89,40 +89,39 @@
 </main>
 
 <footer>
-  <div class="footer-container">
-    <div class="footer-section">
-      <h3>Main Links</h3>
-      <ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="ourcommunity.html">Our Community</a></li>
-        <li><a href="services.html">Services</a></li>
-        <li><a href="spotlight.html">Spotlight</a></li>
-        <li><a href="events.html">Events</a></li>
-        <li><a href="about.html">About</a></li>
-      </ul>
+    <div class="footer-container">
+      <div class="footer-links">
+        <h3>Main Links</h3>
+        <ul>
+          <li><a href="index.html">Home</a></li>
+          <li><a href="ourcommunity.html">Our Community</a></li>
+          <li><a href="spotlight.html">Spotlight</a></li>
+          <li><a href="events.html">Events</a></li>
+          <li><a href="about.html">About</a></li>
+        </ul>
+      </div>
+
+      <div class="footer-contact">
+        <h3>Contact</h3>
+        <p>Phone: (123) 456-7890</p>
+        <p>Location: 123 Main Street, City, State</p>
+        <p>Email: info@example.com</p>
+      </div>
+
+      <div class="footer-legal">
+        <h3>Legal</h3>
+        <ul>
+          <li><a href="privacy.html">Privacy Policy</a></li>
+          <li><a href="terms.html">Terms of Use</a></li>
+          <li><a href="sales.html">Sales & Refunds</a></li>
+        </ul>
+      </div>
     </div>
 
-    <div class="footer-section">
-      <h3>Contact</h3>
-      <p>📞 (706) 555-1234</p>
-      <p>📍 Union County, GA</p>
-      <p>✉️ info@communityhub.org</p>
-    </div>
-
-    <div class="footer-section">
-      <h3>Legal</h3>
-      <ul>
-        <li><a href="privacy.html">Privacy Policy</a></li>
-        <li><a href="terms.html">Terms of Use</a></li>
-        <li><a href="refunds.html">Sales & Refunds</a></li>
-      </ul>
-    </div>
-  </div>
-
-  <div class="footer-bottom">
-    © 2026 Union County Community Hub. All rights reserved.
-  </div>
+    <p class="copyright">© 2026 Your Website Name. All rights reserved.</p>
 </footer>
+
+<script src="js/script.js"></script>
 
 </body>
 </html>
