--- a/events.html
+++ b/events.html
@@ -20,8 +20,8 @@
       </ul>
     </nav>
 
-    <h1>Upcoming Events</h1>
-    <p>Check out the latest events happening in our community.</p>
+    <h1>Discover Local Events</h1>
+    <p>Stay connected! Explore upcoming activities, workshops, festivals, and community gatherings happening around Union County. Join in, learn something new, and meet your neighbors!</p>
   </header>
 
   <!-- MAIN CONTENT -->
