--- a/events.html
+++ b/events.html
@@ -18,8 +18,10 @@
         <li><a href="events.html">Events</a></li>
         <li><a href="about.html">About</a></li>
       </ul>
-    </nav>
-
+    </nav> 
+<section class="events-hero">
+  <img src="https://www.visitblairsvillega.com/images/contents/fairs-festivals-large.jpg" alt="Community Events">
+  <div class="hero-text">
     <h1>Discover Local Events</h1>
     <p>Stay connected! Explore upcoming activities, workshops, festivals, and community gatherings happening around Union County. Join in, learn something new, and meet your neighbors!</p>
   </header>
