--- a/spotlight.html
+++ b/spotlight.html
@@ -17,7 +17,8 @@
         <li><a href="about.html">About</a></li>
       </ul>
     </nav>
-
+<section class="hero spotlight-hero">
+  <div class="hero-text">
     <h1>Community Spotlight</h1>
     <p>Highlighting great local resources and initiatives in our community.</p>
   </header>
