--- a/spotlight.html
+++ b/spotlight.html
@@ -27,6 +27,14 @@
     <!-- Spotlight Resources -->
     <section id="spotlight-resources">
       <h2>Spotlight Resources</h2>
+
+      <input 
+        type="text" 
+        id="resource-search" 
+        placeholder="Search resources..."
+        style="width: 100%; padding:10px; margin-bottom: 20px; font-size: 16px;" 
+        > 
+      
       <div class="spotlight-list">
         <div class="spotlight-card">
           <h3>Union County Library</h3>
