--- a/events.html
+++ b/events.html
@@ -32,6 +32,11 @@
     <section id="events-section">
       <h2>Events List</h2>
       <div id="eventlist"></div> <!-- JS will populate events here -->
+    </section> 
+
+    <section id="all-resources-section"> 
+      <h2>All Community Resources</h2> 
+      <div class="all-resources-list></div> 
     </section>
 
     <!-- CALENDAR -->
