--- a/spotlight.html
+++ b/spotlight.html
@@ -55,6 +55,9 @@
 
     <section id="all-resources-section">
       <h2>All Community Resources</h2>
+      <ul id="resource-list" style="columns: 2; gap: 20px; list-style: disc; padding-left: 20px;"> 
+      
+      </ul>
 
       <input 
         type="text" 
