--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <nav>
   <ul class="nav-links">
     <li><a href="index.html">Home</a></li>
-    <li><a href="ourcommunity.html">Our Community</a></li>
+    <li><a href="our-community.html">Our Community</a></li>
     <li><a href="spotlight.html">Spotlight</a></li>
     <li><a href="events.html">Events</a></li>
     <li><a href="about.html">About</a></li>
