--- a/our-community.html
+++ b/our-community.html
@@ -12,7 +12,7 @@
     <nav>
       <ul class="nav-links">
         <li><a href="index.html">Home</a></li>
-        <li><a href="ourcommunity.html">Our Community</a></li>
+        <li><a href="our-community.html">Our Community</a></li>
         <li><a href="spotlight.html">Spotlight</a></li>
         <li><a href="events.html">Events</a></li>
         <li><a href="about.html">About</a></li>
@@ -39,7 +39,7 @@
         <h3>Main Links</h3>
         <ul>
           <li><a href="index.html">Home</a></li>
-          <li><a href="ourcommunity.html">Our Community</a></li>
+          <li><a href="our-community.html">Our Community</a></li>
           <li><a href="spotlight.html">Spotlight</a></li>
           <li><a href="events.html">Events</a></li>
           <li><a href="about.html">About</a></li>
