--- a/privacy.html
+++ b/privacy.html
@@ -4,14 +4,84 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Privacy Policy</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-  
-  <main>
+  <!-- HEADER + NAV -->
+  <header>
+    <nav>
+      <ul class="nav-links">
+        <li><a href="index.html">Home</a></li>
+        <li><a href="ourcommunity.html">Our Community</a></li>
+        <li><a href="spotlight.html">Spotlight</a></li>
+        <li><a href="events.html">Events</a></li>
+        <li><a href="about.html">About</a></li>
+      </ul>
+    </nav>
     <h1>Privacy Policy</h1>
-    <p>This page will contain the privacy policy for the Union County Community Hub.</p>
+    <p>Your privacy is important to us. Please review the details below to understand how we handle your data.</p>
+  </header>
+
+  <!-- MAIN CONTENT -->
+  <main>
+    <section class="privacy-content">
+      <h2>Information We Collect</h2>
+      <p>We may collect information you provide when submitting forms or interacting with our website, such as your name, email address, and other relevant information.</p>
+
+      <h2>How We Use Your Information</h2>
+      <p>Your information may be used to respond to inquiries, provide services, and improve the user experience on our website. We do not sell your personal information to third parties.</p>
+
+      <h2>Cookies</h2>
+      <p>We use cookies to enhance your browsing experience and analyze website traffic. You can disable cookies in your browser settings if you prefer.</p>
+
+      <h2>Data Security</h2>
+      <p>We implement reasonable security measures to protect your information. However, no method of transmission over the internet is completely secure.</p>
+
+      <h2>Third-Party Links</h2>
+      <p>Our website may contain links to third-party websites. We are not responsible for their privacy practices, and we encourage you to review their policies.</p>
+
+      <h2>Changes to This Policy</h2>
+      <p>We may update this Privacy Policy periodically. Any changes will be posted on this page with an updated date.</p>
+
+      <h2>Contact Us</h2>
+      <p>If you have any questions or concerns regarding this Privacy Policy, please contact us at <a href="mailto:info@communityhub.org">info@communityhub.org</a>.</p>
+    </section>
   </main>
 
+  <!-- FOOTER -->
+  <footer>
+    <div class="footer-container">
+      <div class="footer-section">
+        <h3>Main Links</h3>
+        <ul>
+          <li><a href="index.html">Home</a></li>
+          <li><a href="ourcommunity.html">Our Community</a></li>
+          <li><a href="spotlight.html">Spotlight</a></li>
+          <li><a href="events.html">Events</a></li>
+          <li><a href="about.html">About</a></li>
+        </ul>
+      </div>
+
+      <div class="footer-section">
+        <h3>Contact</h3>
+        <p>📞 (706) 555-1234</p>
+        <p>📍 Union County, GA</p>
+        <p>✉️ info@communityhub.org</p>
+      </div>
+
+      <div class="footer-section">
+        <h3>Legal</h3>
+        <ul>
+          <li><a href="privacy.html">Privacy Policy</a></li>
+          <li><a href="terms.html">Terms of Use</a></li>
+          <li><a href="refunds.html">Sales & Refunds</a></li>
+        </ul>
+      </div>
+    </div>
+
+    <div class="footer-bottom">
+      © 2026 Union County Community Hub. All rights reserved.
+    </div>
+  </footer>
 </body>
 </html>
