--- a/spotlight.html
+++ b/spotlight.html
@@ -94,9 +94,9 @@
     </section>
   </main>
 
-  <footer>
+   <footer>
     <div class="footer-container">
-      <div class="footer-links">
+      <div class="footer-section">
         <h3>Main Links</h3>
         <ul>
           <li><a href="index.html">Home</a></li>
@@ -107,26 +107,28 @@
         </ul>
       </div>
 
-      <div class="footer-contact">
+      <div class="footer-section">
         <h3>Contact</h3>
-        <p>Phone: (123) 456-7890</p>
-        <p>Location: 123 Main Street, City, State</p>
-        <p>Email: info@example.com</p>
+        <p>📞 (706) 555-1234</p>
+        <p>📍 Union County, GA</p>
+        <p>✉️ info@communityhub.org</p>
       </div>
 
-      <div class="footer-legal">
+      <div class="footer-section">
         <h3>Legal</h3>
         <ul>
           <li><a href="privacy.html">Privacy Policy</a></li>
           <li><a href="terms.html">Terms of Use</a></li>
-          <li><a href="sales.html">Sales & Refunds</a></li>
+          <li><a href="refunds.html">Sales & Refunds</a></li>
         </ul>
       </div>
     </div>
 
-    <p class="copyright">© 2026 Your Website Name. All rights reserved.</p>
+    <div class="footer-bottom">
+      © 2026 Union County Community Hub. All rights reserved.
+    </div>
   </footer>
-
+  
   <script src="js/script.js"></script>
 </body>
 </html>
