--- a/events.html
+++ b/events.html
@@ -82,5 +82,9 @@
   </footer>
     
   <script src="js/script.js"></script>
+  <script> 
+  console.log("Inline JS test works!"); 
+  alert("Inline JS is running!"); 
+  </script>
 </body>
 </html>
