--- a/terms.html
+++ b/terms.html
@@ -1,17 +1,96 @@
-<!DOCTYPE html>
+!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Terms of Use</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-  
+
+  <!-- HEADER + NAV -->
+  <header>
+    <nav>
+      <ul class="nav-links">
+        <li><a href="index.html">Home</a></li>
+        <li><a href="ourcommunity.html">Our Community</a></li>
+        <li><a href="spotlight.html">Spotlight</a></li>
+        <li><a href="events.html">Events</a></li>
+        <li><a href="about.html">About</a></li>
+      </ul>
+    </nav>
+    <section class="hero">
+      <div class="hero-text">
+        <h1>Terms of Use</h1>
+        <p>Please read these terms carefully before using our website.</p>
+      </div>
+    </section>
+  </header>
+
+  <!-- MAIN CONTENT -->
   <main>
-    <h1>Terms of Use</h1>
-    <p>This page will contain the privacy policy for the Union County Community Hub.</p>
+    <section id="terms-of-use" style="max-width: 900px; margin: 40px auto; padding: 0 20px;">
+      <h2>1. Acceptance of Terms</h2>
+      <p>By accessing or using this website, you agree to comply with and be bound by these Terms of Use. If you do not agree, you should not use the website.</p>
+
+      <h2>2. Use of Website</h2>
+      <p>You may use this website for personal, non-commercial purposes only. You must not use the website in any way that causes damage, disrupts, or interferes with its operation.</p>
+
+      <h2>3. Intellectual Property</h2>
+      <p>All content on this website, including text, images, logos, and designs, is the property of Union County Community Hub and is protected by copyright laws. You may not reproduce, distribute, or create derivative works without permission.</p>
+
+      <h2>4. External Links</h2>
+      <p>Our website may contain links to external sites. We are not responsible for the content or practices of these third-party websites.</p>
+
+      <h2>5. Limitation of Liability</h2>
+      <p>We make no warranties regarding the accuracy, reliability, or completeness of the website content. Use the website at your own risk. We are not liable for any direct, indirect, or consequential damages arising from your use of the site.</p>
+
+      <h2>6. Modifications</h2>
+      <p>We reserve the right to modify these Terms of Use at any time without prior notice. Continued use of the website constitutes acceptance of any changes.</p>
+
+      <h2>7. Governing Law</h2>
+      <p>These Terms of Use are governed by the laws of the State of Georgia, United States.</p>
+
+      <h2>8. Contact</h2>
+      <p>If you have questions regarding these terms, please contact us at <a href="mailto:info@communityhub.org">info@communityhub.org</a>.</p>
+    </section>
   </main>
+
+  <!-- FOOTER -->
+  <footer>
+    <div class="footer-container">
+      <div class="footer-section">
+        <h3>Main Links</h3>
+        <ul>
+          <li><a href="index.html">Home</a></li>
+          <li><a href="ourcommunity.html">Our Community</a></li>
+          <li><a href="spotlight.html">Spotlight</a></li>
+          <li><a href="events.html">Events</a></li>
+          <li><a href="about.html">About</a></li>
+        </ul>
+      </div>
+
+      <div class="footer-section">
+        <h3>Contact</h3>
+        <p>📞 (706) 555-1234</p>
+        <p>📍 Union County, GA</p>
+        <p>✉️ info@communityhub.org</p>
+      </div>
+
+      <div class="footer-section">
+        <h3>Legal</h3>
+        <ul>
+          <li><a href="privacy.html">Privacy Policy</a></li>
+          <li><a href="terms.html">Terms of Use</a></li>
+          <li><a href="refunds.html">Sales & Refunds</a></li>
+        </ul>
+      </div>
+    </div>
+
+    <div class="footer-bottom">
+      © 2026 Union County Community Hub. All rights reserved.
+    </div>
+  </footer>
 
 </body>
 </html>
