--- a/index.html
+++ b/index.html
@@ -77,6 +77,24 @@
     </div>
   </footer>
 
+  <section class="testimonials">
+    <h2>What Our Community Says</h2>
+    <div class="testimonial-cards">
+      <div class="testimonial-card">
+        <p>"The community hub has really brought us all together. Amazing events and programs!"</p>
+        <strong>- Jane D.</strong>
+      </div>
+      <div class="testimonial-card">
+        <p>"I love the local garden programs. They’re fantastic for families and kids."</p>
+        <strong>- Mike R.</strong>
+      </div>
+      <div class="testimonial-card">
+        <p>"The library events are excellent. My kids look forward to story time every week!"</p>
+        <strong>- Sarah K.</strong>
+      </div>
+    </div>
+  </section> 
+
 <script src="js/script.js"></script>
 
 </body>
