--- a/spotlight.html
+++ b/spotlight.html
@@ -66,9 +66,26 @@
         style="width: 100%; padding:10px; margin-bottom: 20px; font-size:16px;"
       >
 
-      <div class="all-resources-list">
-    
-      </div>
+     <div class="all-resources-list" id="additional-resources">
+  <div class="resource-card">
+    <h3>Union County Food Pantry</h3>
+    <p>Providing food assistance to families in need.</p>
+    <a href="https://example.com/food-pantry" target="_blank">Visit Website</a>
+  </div>
+
+  <div class="resource-card">
+    <h3>Senior Activity Center</h3>
+    <p>Programs and social events for older adults.</p>
+    <a href="https://example.com/senior-center" target="_blank">Visit Website</a>
+  </div>
+
+  <div class="resource-card">
+    <h3>Mental Health Support Line</h3>
+    <p>Confidential support and counseling resources.</p>
+    <a href="https://example.com/mental-health" target="_blank">Visit Website</a>
+  </div>
+</div>
+
     </section>
 
     <!-- SUBMISSION FORM -->
