--- a/ourcommunity.html
+++ b/ourcommunity.html
@@ -19,9 +19,10 @@
       </ul>
     </nav>
 
-    <section class="hero community-hero">
+    <section class="community-hero">
+      <img src="images/our-community-new.jpg" alt="Our Community">
       <div class="hero-text">
-        <h1>Our Community</h1>
+        <h1>Welcome to Our Community</h1>
         <p>Discover local initiatives, organizations, and resources that make our community thrive.</p>
       </div>
     </section>
