--- a/spotlight.html
+++ b/spotlight.html
@@ -83,6 +83,27 @@
     <h3>Mental Health Support Line</h3>
     <p>Confidential support and counseling resources.</p>
     <a href="https://example.com/mental-health" target="_blank">Visit Website</a>
+
+    <div class="all-resources-list" id="additional-resources">
+
+      <div class="resource-card">
+  <h3>Job Assistance Center</h3>
+  <p>Resume help, job listings, and interview preparation.</p>
+  <a href="https://example.com/job-assistance" target="_blank">Visit Website</a>
+</div>
+
+<div class="resource-card">
+  <h3>Family Support Services</h3>
+  <p>Helping families access housing, childcare, and financial aid.</p>
+  <a href="https://example.com/family-support" target="_blank">Visit Website</a>
+</div>
+
+<div class="resource-card">
+  <h3>Veterans Resource Office</h3>
+  <p>Support services and benefits assistance for local veterans.</p>
+  <a href="https://example.com/veterans-resources" target="_blank">Visit Website</a>
+</div>
+
   </div>
 </div>
 
