--- a/spotlight.html
+++ b/spotlight.html
@@ -85,7 +85,9 @@
     <a href="https://example.com/mental-health" target="_blank">Visit Website</a>
     </div>
 
-      <div class="resource-card">
+    <div class="all-resources-list" id="additional-resources">
+
+       <div class="resource-card">
   <h3>Job Assistance Center</h3>
   <p>Resume help, job listings, and interview preparation.</p>
   <a href="https://example.com/job-assistance" target="_blank">Visit Website</a>
