--- a/spotlight.html
+++ b/spotlight.html
@@ -34,10 +34,12 @@
 
       <div class="spotlight-list">
         <div class="spotlight-card highlight">
-          <h3>Union County Library</h3>
-          <p>A great place for books, events, and learning resources for all ages.</p>
-          <p><a href="https://www.unioncountylibrary.com" target="_blank">unioncountylibrary.com</a></p>
-        </div>
+  <img src="images/library.jpg" alt="Union County Library">
+  <h3>Union County Library</h3>
+  <p>A great place for books, events, and learning resources for all ages.</p>
+  <p><a href="https://www.unioncountylibrary.com" target="_blank">unioncountylibrary.com</a></p>
+</div>
+
 
         <div class="spotlight-card highlight">
           <h3>Community Garden</h3>
