--- a/spotlight.html
+++ b/spotlight.html
@@ -42,14 +42,14 @@
 
 
         <div class="spotlight-card highlight">
-          <img src="https://www.google.com/imgres?q=union%20county%20Ga%20community%20garden&imgurl=https%3A%2F%2Fjohnscreekga.b-cdn.net%2Fapp%2Fuploads%2F2024%2F03%2Fcommunity-garden-banner.webp&imgrefurl=https%3A%2F%2Fjohnscreekga.gov%2Frecreation-parks%2Fparks%2Fnewtown-park%2Fcommunity-garden%2F&docid=OQYVT7eSZpP8SM&tbnid=Ac8u_1ylNzlFrM&vet=12ahUKEwjwwPLl3c2SAxWB2MkDHYotE3MQnPAOegQILBAB..i&w=2500&h=1667&hcb=2&ved=2ahUKEwjwwPLl3c2SAxWB2MkDHYotE3MQnPAOegQILBAB">
+          <img src="https://www.google.com/imgres?q=union%20county%20Ga%20community%20garden&imgurl=https%3A%2F%2Fjohnscreekga.b-cdn.net%2Fapp%2Fuploads%2F2024%2F03%2Fcommunity-garden-banner.webp&imgrefurl=https%3A%2F%2Fjohnscreekga.gov%2Frecreation-parks%2Fparks%2Fnewtown-park%2Fcommunity-garden%2F&docid=OQYVT7eSZpP8SM&tbnid=Ac8u_1ylNzlFrM&vet=12ahUKEwjwwPLl3c2SAxWB2MkDHYotE3MQnPAOegQILBAB..i&w=2500&h=1667&hcb=2&ved=2ahUKEwjwwPLl3c2SAxWB2MkDHYotE3MQnPAOegQILBAB" alt ="Community Garden">
           <h3>Community Garden</h3>
           <p>Volunteer-run garden offering fresh produce and gardening classes.</p>
           <p><a href="https://www.communitygarden.org" target="_blank">communitygarden.org</a></p>
         </div>
 
         <div class="spotlight-card highlight">
-          <img src="https://www.google.com/imgres?q=union%20county%20ga%20youth%20center&imgurl=https%3A%2F%2Flookaside.fbsbx.com%2Flookaside%2Fcrawler%2Fmedia%2F%3Fmedia_id%3D100069061665076&imgrefurl=https%3A%2F%2Fwww.facebook.com%2Fp%2FUnion-County-Recreation-Department-100069061665076%2F&docid=DSdoK5B8R5az5M&tbnid=0wC3XpWVJB7U1M&vet=12ahUKEwikx9K-3s2SAxVDnSYFHfypDwoQnPAOegQIEhAB..i&w=2048&h=1365&hcb=2&ved=2ahUKEwikx9K-3s2SAxVDnSYFHfypDwoQnPAOegQIEhAB">
+          <img src="https://www.google.com/imgres?q=union%20county%20ga%20youth%20center&imgurl=https%3A%2F%2Flookaside.fbsbx.com%2Flookaside%2Fcrawler%2Fmedia%2F%3Fmedia_id%3D100069061665076&imgrefurl=https%3A%2F%2Fwww.facebook.com%2Fp%2FUnion-County-Recreation-Department-100069061665076%2F&docid=DSdoK5B8R5az5M&tbnid=0wC3XpWVJB7U1M&vet=12ahUKEwikx9K-3s2SAxVDnSYFHfypDwoQnPAOegQIEhAB..i&w=2048&h=1365&hcb=2&ved=2ahUKEwikx9K-3s2SAxVDnSYFHfypDwoQnPAOegQIEhAB" alt="Local Youth Center">
           <h3>Local Youth Center</h3>
           <p>After-school programs, sports, and mentoring for children and teens.</p>
           <p><a href="https://www.localyouthcenter.com" target="_blank">localyouthcenter.com</a></p>
