--- a/spotlight.html
+++ b/spotlight.html
@@ -35,8 +35,8 @@
       <div class="spotlight-list">
         <div class="spotlight-card highlight">
   <img src="https://www.google.com/imgres?q=union%20county%20library&imgurl=https%3A%2F%2Flookaside.fbsbx.com%2Flookaside%2Fcrawler%2Fmedia%2F%3Fmedia_id%3D100064592537856&imgrefurl=https%3A%2F%2Fwww.facebook.com%2Funionsclibrary%2F&docid=W5xk4GjOtQ7jvM&tbnid=RP_LwD3pumwJuM&vet=12ahUKEwjU1vqp3c2SAxX-_skDHZTdGacQnPAOegQIHhAB..i&w=2048&h=1365&hcb=2&ved=2ahUKEwjU1vqp3c2SAxX-_skDHZTdGacQnPAOegQIHhAB" alt="Union County Library">
-  <h3>Union County Library</h3>
-  <p>A great place for books, events, and learning resources for all ages.</p>
+  <h3>Union County Public Library</h3>
+  <p>Provides free access to books, educational programs, and community meeting spaces for residents of Union County.</p>
   <p><a href="https://www.unioncountylibrary.com" target="_blank">unioncountylibrary.com</a></p>
 </div>
 
