--- a/spotlight.html
+++ b/spotlight.html
@@ -32,27 +32,27 @@
     <section id="spotlight-section">
       <h2>Spotlight Resources</h2>
 
-      <div class="spotlight-list">
+        <div class="spotlight-list">
         <div class="spotlight-card highlight">
-  <img src="https://www.google.com/imgres?q=union%20county%20library&imgurl=https%3A%2F%2Flookaside.fbsbx.com%2Flookaside%2Fcrawler%2Fmedia%2F%3Fmedia_id%3D100064592537856&imgrefurl=https%3A%2F%2Fwww.facebook.com%2Funionsclibrary%2F&docid=W5xk4GjOtQ7jvM&tbnid=RP_LwD3pumwJuM&vet=12ahUKEwjU1vqp3c2SAxX-_skDHZTdGacQnPAOegQIHhAB..i&w=2048&h=1365&hcb=2&ved=2ahUKEwjU1vqp3c2SAxX-_skDHZTdGacQnPAOegQIHhAB" alt="Union County Library">
-  <h3>Union County Public Library</h3>
-  <p>Provides free access to books, educational programs, and community meeting spaces for residents of Union County.</p>
-  <p><a href="https://www.unioncountylibrary.com" target="_blank">unioncountylibrary.com</a></p>
-</div>
+          <img src="https://www.google.com/imgres?q=union%20county%20library&imgurl=https%3A%2F%2Flookaside.fbsbx.com%2Flookaside%2Fcrawler%2Fmedia%2F%3Fmedia_id%3D100064592537856&imgrefurl=https%3A%2F%2Fwww.facebook.com%2Funionsclibrary%2F&docid=W5xk4GjOtQ7jvM&tbnid=RP_LwD3pumwJuM&vet=12ahUKEwjU1vqp3c2SAxX-_skDHZTdGacQnPAOegQIHhAB..i&w=2048&h=1365&hcb=2&ved=2ahUKEwjU1vqp3c2SAxX-_skDHZTdGacQnPAOegQIHhAB" alt="Union County Library">
+          <h3>Union County Public Library</h3>
+          <p>Provides free access to books, educational programs, and community meeting spaces for residents of Union County.</p>
+          <p><a href="https://www.mountainlibrary.com/locations/ucpl/" target="_blank">Visit Website</a></p>
+        </div>
 
 
         <div class="spotlight-card highlight">
           <img src="https://www.google.com/imgres?q=union%20county%20Ga%20community%20garden&imgurl=https%3A%2F%2Fjohnscreekga.b-cdn.net%2Fapp%2Fuploads%2F2024%2F03%2Fcommunity-garden-banner.webp&imgrefurl=https%3A%2F%2Fjohnscreekga.gov%2Frecreation-parks%2Fparks%2Fnewtown-park%2Fcommunity-garden%2F&docid=OQYVT7eSZpP8SM&tbnid=Ac8u_1ylNzlFrM&vet=12ahUKEwjwwPLl3c2SAxWB2MkDHYotE3MQnPAOegQILBAB..i&w=2500&h=1667&hcb=2&ved=2ahUKEwjwwPLl3c2SAxWB2MkDHYotE3MQnPAOegQILBAB" alt ="Community Garden">
-          <h3>Community Garden</h3>
-          <p>Volunteer-run garden offering fresh produce and gardening classes.</p>
-          <p><a href="https://www.communitygarden.org" target="_blank">communitygarden.org</a></p>
+          <h3>Blairsville-Union County Chamber of Commerce</h3>
+          <p>Supports local businesses and promotes economic development, tourism, and community engagement in the Blairsville area.</p>
+          <p><a href="https://www.visitblairsvillega.com/" target="_blank">Visit Website</a></p>
         </div>
 
         <div class="spotlight-card highlight">
           <img src="https://www.google.com/imgres?q=union%20county%20ga%20youth%20center&imgurl=https%3A%2F%2Flookaside.fbsbx.com%2Flookaside%2Fcrawler%2Fmedia%2F%3Fmedia_id%3D100069061665076&imgrefurl=https%3A%2F%2Fwww.facebook.com%2Fp%2FUnion-County-Recreation-Department-100069061665076%2F&docid=DSdoK5B8R5az5M&tbnid=0wC3XpWVJB7U1M&vet=12ahUKEwikx9K-3s2SAxVDnSYFHfypDwoQnPAOegQIEhAB..i&w=2048&h=1365&hcb=2&ved=2ahUKEwikx9K-3s2SAxVDnSYFHfypDwoQnPAOegQIEhAB" alt="Local Youth Center">
-          <h3>Local Youth Center</h3>
-          <p>After-school programs, sports, and mentoring for children and teens.</p>
-          <p><a href="https://www.localyouthcenter.com" target="_blank">localyouthcenter.com</a></p>
+          <h3>Union County Resource Center</h3>
+          <p>Offers assistance programs and connections to essential services such as food, housing, and family support resources.</p>
+          <p><a href="https://www.localyouthcenter.com" target="_blank">Visit Website</a></p>
         </div>
       </div>
     </section>
